tests/expectations/compiler/statements/statements_after_complete_conditional_return_fail.out
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:9:5
     |
   9 |     let double: u32 = x + x;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:10:5
     |
  10 |     return double;
     |     ^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo {}
     |         ^^^^^^^^^
